--- a/waybar/.config/waybar/colors.css
+++ b/waybar/.config/waybar/colors.css
@@ -7,4 +7,4 @@
 @define-color green      #5f7a5f;
 @define-color blue       #5f7a8c;
 @define-color yellow     #a4965f;
-@define-color lime       #6e8f2a; 
+@define-color lime       #7a9e34; 
