--- a/themes/.themes/JQN-Mono/gtk-3.0/gtk-dark.css
+++ b/themes/.themes/JQN-Mono/gtk-3.0/gtk-dark.css
@@ -337,7 +337,7 @@ label.separator {
 }
 
 .accent {
-    color: #1b82b3;
+    color: #ab545b;
 }
 
 .success {
@@ -831,7 +831,7 @@ check:indeterminate,
 radio:checked,
 radio:indeterminate {
     color: white;
-    background-image: image(#1b82b3);
+    background-image: image(#ab545b);
     box-shadow: none;
 }
 
@@ -846,7 +846,7 @@ check:checked:active,
 check:indeterminate:active,
 radio:checked:active,
 radio:indeterminate:active {
-    background-image: image(#1b82b3);
+    background-image: image(#ab545b);
 }
 
 check:checked:backdrop,
@@ -956,7 +956,7 @@ switch:checked {
     color: transparent;
     box-shadow: none;
     transition: background-image 0.3s, box-shadow 0;
-    background-image: image(#1b82b3);
+    background-image: image(#ab545b);
 }
 
 switch:checked:hover {
@@ -1377,7 +1377,7 @@ progressbar>trough {
 }
 
 progressbar>trough>progress {
-    background-color: #1b82b3;
+    background-color: #ab545b;
     border: none;
     border-radius: 99px;
     box-shadow: none;
@@ -1490,8 +1490,8 @@ levelbar>trough>block.low {
 
 levelbar>trough>block.high,
 levelbar>trough>block:not(.empty) {
-    border-color: #1b82b3;
-    background-color: #1b82b3;
+    border-color: #ab545b;
+    background-color: #ab545b;
 }
 
 levelbar>trough>block.full {
@@ -1506,8 +1506,8 @@ levelbar>trough>block.empty {
 
 .osd levelbar>trough>block.high,
 .osd levelbar>trough>block:not(.empty) {
-    border-color: #1b82b3;
-    background-color: #1b82b3;
+    border-color: #ab545b;
+    background-color: #ab545b;
 }
 
 
@@ -1915,7 +1915,7 @@ calendar {
 
 calendar:selected {
     border-radius: 9999px;
-    background-color: #1b82b3;
+    background-color: #ab545b;
 }
 
 calendar:backdrop,
@@ -2271,7 +2271,7 @@ messagedialog.csd .dialog-action-area button:disabled {
 }
 
 messagedialog.csd .dialog-action-area button.suggested-action {
-    background-color: #1b82b3;
+    background-color: #ab545b;
     color: white;
 }
 
@@ -3231,7 +3231,7 @@ entry>progress>trough>progress {
     background-image: none;
     border-radius: 6px;
     border-width: 0 0 2px;
-    border-color: #1b82b3;
+    border-color: #ab545b;
     border-style: solid;
     box-shadow: none;
 }
@@ -3408,7 +3408,7 @@ combobox:drop(active) {
     margin-bottom: 2px;
     border-style: none;
     color: white;
-    background-color: #1b82b3;
+    background-color: #ab545b;
 }
 
 :dir(ltr) .entry-tag {
@@ -3427,7 +3427,7 @@ combobox:drop(active) {
 
 :backdrop .entry-tag {
     color: rgba(255, 255, 255, 0.5);
-    background-color: #1b82b3;
+    background-color: #ab545b;
 }
 
 .entry-tag.button {
@@ -4493,7 +4493,7 @@ headerbar entry>progress>trough>progress,
     background-image: none;
     border-radius: 6px;
     border-width: 0 0 2px;
-    border-color: #1b82b3;
+    border-color: #ab545b;
     border-style: solid;
     box-shadow: none;
 }
@@ -4660,7 +4660,7 @@ viewswitcher button.needs-attention:checked>stack>box label {
 
 viewswitcher button.needs-attention>stack>box label {
     animation: needs_attention 150ms ease-in;
-    background-image: image(#1b82b3);
+    background-image: image(#ab545b);
     background-size: 6px 6px, 6px 6px;
     background-repeat: no-repeat;
     background-position: right 0px, right 1px;
@@ -5317,7 +5317,7 @@ assistant .sidebar label {
 }
 
 assistant .sidebar label.highlight {
-    background-color: #1b82b3;
+    background-color: #ab545b;
 }
 
 
@@ -5643,7 +5643,7 @@ placessidebar row:selected:active {
 placessidebar row.sidebar-placeholder-row {
     padding: 0 8px;
     min-height: 2px;
-    background-image: image(#1b82b3);
+    background-image: image(#ab545b);
     background-clip: content-box;
 }
 
@@ -5652,12 +5652,12 @@ placessidebar row.sidebar-new-bookmark-row {
 }
 
 placessidebar row:drop(active):not(:disabled) {
-    color: #1b82b3;
+    color: #ab545b;
     box-shadow: none;
 }
 
 placessidebar row:drop(active):not(:disabled):selected {
-    color: #1b82b3;
+    color: #ab545b;
     box-shadow: none;
 }
 
@@ -6011,18 +6011,18 @@ treeview.view.progressbar {
     box-shadow: none;
     color: white;
     border-radius: 6px;
-    background: #1b82b3;
+    background: #ab545b;
 }
 
 treeview.view.progressbar:not(:backdrop):not(:selected):hover {
-    background-color: #1b82b3;
+    background-color: #ab545b;
 }
 
 treeview.view.progressbar:selected:focus,
 treeview.view.progressbar:selected {
     box-shadow: none;
     border-radius: 6px;
-    background: #1b82b3;
+    background: #ab545b;
 }
 
 treeview.view.progressbar:selected:focus:backdrop,
@@ -6451,7 +6451,7 @@ treeview spinbutton:not(.vertical) entry {
 button.suggested-action {
     color: white;
     outline-color: transparent;
-    background-color: #1b82b3;
+    background-color: #ab545b;
 }
 
 button.suggested-action.flat {
@@ -6461,7 +6461,7 @@ button.suggested-action.flat {
     box-shadow: transparent;
     text-shadow: none;
     -gtk-icon-shadow: none;
-    color: #1b82b3;
+    color: #ab545b;
 }
 
 button.suggested-action:hover {
@@ -6535,7 +6535,7 @@ button.suggested-action.flat:backdrop:disabled {
     box-shadow: none;
     text-shadow: none;
     -gtk-icon-shadow: none;
-    color: #1b82b3;
+    color: #ab545b;
 }
 
 button.suggested-action:disabled {
@@ -6558,7 +6558,7 @@ button.suggested-action:disabled:checked {
     background-clip: padding-box;
     color: white;
     outline-color: transparent;
-    background-color: #1b82b3;
+    background-color: #ab545b;
 }
 
 .osd button.suggested-action:hover {
@@ -6814,7 +6814,7 @@ headerbar button.suggested-action:not(.titlebutton),
 headerbar button.text-button.suggested-action:not(.titlebutton) {
     color: white;
     outline-color: transparent;
-    background-color: #1b82b3;
+    background-color: #ab545b;
 }
 
 popover.background button.suggested-action:hover,
@@ -7387,7 +7387,7 @@ headerbar button.destructive-action:disabled:backdrop:not(.titlebutton),
 headerbar.selection-mode button.suggested-action {
     color: white;
     outline-color: transparent;
-    background-color: #1b82b3;
+    background-color: #ab545b;
     border-color: transparent;
 }
 
@@ -7481,7 +7481,7 @@ button:visited>label,
 button:link,
 button:visited,
 *:link {
-    color: #1b82b3;
+    color: #ab545b;
     font-weight: inherit;
 }
 
@@ -7489,14 +7489,14 @@ button:link>label:visited,
 button:visited>label:visited,
 button:visited,
 *:link:visited {
-    color: #1b82b3;
+    color: #ab545b;
 }
 
 *:selected button:link>label:visited,
 *:selected button:visited>label:visited,
 *:selected button:visited,
 *:selected *:link:visited {
-    color: #1b82b3;
+    color: #ab545b;
 }
 
 button:link>label:hover,
@@ -7522,7 +7522,7 @@ button:visited>label:active,
 button:active:link,
 button:active:visited,
 *:link:active {
-    color: #1b82b3;
+    color: #ab545b;
     background-color: rgba(255, 255, 255, 0.05);
 }
 
@@ -7531,7 +7531,7 @@ button:active:visited,
 *:selected button:active:link,
 *:selected button:active:visited,
 *:selected *:link:active {
-    color: #1b82b3;
+    color: #ab545b;
     background-color: rgba(255, 255, 255, 0.05);
 }
 
@@ -8594,7 +8594,7 @@ iconview.content-view.check:not(list),
     min-width: 32px;
     min-height: 32px;
     color: transparent;
-    background-color: #1b82b3;
+    background-color: #ab545b;
     border-radius: 5px;
     background-image: none;
     transition: 200ms;
@@ -8611,7 +8611,7 @@ iconview.content-view.check:hover:not(list),
     min-width: 32px;
     min-height: 32px;
     color: transparent;
-    background-color: #1b82b3;
+    background-color: #ab545b;
     border-radius: 5px;
     background-image: none;
     transition: 200ms;
@@ -8628,7 +8628,7 @@ iconview.content-view.check:active:not(list),
     min-width: 32px;
     min-height: 32px;
     color: transparent;
-    background-color: #1b82b3;
+    background-color: #ab545b;
     border-radius: 5px;
     background-image: none;
     transition: 200ms;
@@ -8662,7 +8662,7 @@ iconview.content-view.check:checked:not(list),
     min-width: 32px;
     min-height: 32px;
     color: white;
-    background-color: #1b82b3;
+    background-color: #ab545b;
     border-radius: 5px;
     background-image: none;
     transition: 200ms;
@@ -8679,7 +8679,7 @@ iconview.content-view.check:checked:hover:not(list),
     min-width: 32px;
     min-height: 32px;
     color: white;
-    background-color: #1b82b3;
+    background-color: #ab545b;
     border-radius: 5px;
     background-image: none;
     transition: 200ms;
@@ -8696,7 +8696,7 @@ iconview.content-view.check:checked:active:not(list),
     min-width: 32px;
     min-height: 32px;
     color: white;
-    background-color: #1b82b3;
+    background-color: #ab545b;
     border-radius: 5px;
     background-image: none;
     transition: 200ms;
@@ -8713,7 +8713,7 @@ iconview.content-view.check:backdrop:checked:not(list),
     min-width: 32px;
     min-height: 32px;
     color: rgba(255, 255, 255, 0.5);
-    background-color: #1b82b3;
+    background-color: #ab545b;
     border-radius: 5px;
     background-image: none;
     transition: 200ms;
@@ -8768,11 +8768,11 @@ iconview.content-view.check:backdrop:checked:not(list),
 
 @keyframes needs_attention {
     from {
-        background-image: -gtk-gradient(radial, center center, 0, center center, 0.01, to(mix(white, #1b82b3, 0.85)), to(transparent));
+        background-image: -gtk-gradient(radial, center center, 0, center center, 0.01, to(mix(white, #ab545b, 0.85)), to(transparent));
     }
 
     to {
-        background-image: -gtk-gradient(radial, center center, 0, center center, 0.5, to(#1b82b3), to(transparent));
+        background-image: -gtk-gradient(radial, center center, 0, center center, 0.5, to(#ab545b), to(transparent));
     }
 }
 
@@ -8780,7 +8780,7 @@ stacksidebar row.needs-attention>label,
 .stack-switcher>button.needs-attention>label,
 .stack-switcher>button.needs-attention>image {
     animation: needs_attention 150ms ease-in;
-    background-image: radial-gradient(farthest-side, #1b82b3 96%, transparent);
+    background-image: radial-gradient(farthest-side, #ab545b 96%, transparent);
     background-size: 6px 6px;
     background-repeat: no-repeat;
     background-position: right 3px;
@@ -9993,7 +9993,7 @@ headerbar.selection-mode button.titlebutton:backdrop,
 .nautilus-window entry.search>*:not(image),
 .nautilus-window entry.search>*:backdrop:not(image) {
     color: white;
-    background-color: #1b82b3;
+    background-color: #ab545b;
 }
 
 .nautilus-window .view .dim-label,
@@ -10464,7 +10464,7 @@ window.background.chromium headerbar {
 }
 
 window.background.chromium spinner {
-    color: #1b82b3;
+    color: #ab545b;
 }
 
 window.background.chromium textview.view {
@@ -10472,7 +10472,7 @@ window.background.chromium textview.view {
 }
 
 window.background.chromium treeview.view.cell:selected:focus {
-    background-color: #1b82b3;
+    background-color: #ab545b;
     color: white;
 }
 
@@ -10941,4 +10941,4 @@ sq_button.small {
 @define-color theme_base_color #1c1c1c;
 
 /*bg of selections*/
-@define-color theme_selected_bg_color #1b82b3;
+@define-color theme_selected_bg_color #ab545b;
