--- a/themes/.themes/JQN-Mono/gtk-3.0/gtk.css
+++ b/themes/.themes/JQN-Mono/gtk-3.0/gtk.css
@@ -341,7 +341,7 @@ label.separator {
 }
 
 .accent {
-    color: #1b82b3;
+    color: #ab545b;
 }
 
 .success {
@@ -835,7 +835,7 @@ check:indeterminate,
 radio:checked,
 radio:indeterminate {
     color: white;
-    background-image: image(#1b82b3);
+    background-image: image(#ab545b);
     box-shadow: none;
 }
 
@@ -850,7 +850,7 @@ check:checked:active,
 check:indeterminate:active,
 radio:checked:active,
 radio:indeterminate:active {
-    background-image: image(#1b82b3);
+    background-image: image(#ab545b);
 }
 
 check:checked:backdrop,
@@ -960,7 +960,7 @@ switch:checked {
     color: transparent;
     box-shadow: none;
     transition: background-image 0.3s, box-shadow 0;
-    background-image: image(#1b82b3);
+    background-image: image(#ab545b);
 }
 
 switch:checked:hover {
@@ -1381,7 +1381,7 @@ progressbar>trough {
 }
 
 progressbar>trough>progress {
-    background-color: #1b82b3;
+    background-color: #ab545b;
     border: none;
     border-radius: 99px;
     box-shadow: none;
@@ -1494,8 +1494,8 @@ levelbar>trough>block.low {
 
 levelbar>trough>block.high,
 levelbar>trough>block:not(.empty) {
-    border-color: #1b82b3;
-    background-color: #1b82b3;
+    border-color: #ab545b;
+    background-color: #ab545b;
 }
 
 levelbar>trough>block.full {
@@ -1510,8 +1510,8 @@ levelbar>trough>block.empty {
 
 .osd levelbar>trough>block.high,
 .osd levelbar>trough>block:not(.empty) {
-    border-color: #1b82b3;
-    background-color: #1b82b3;
+    border-color: #ab545b;
+    background-color: #ab545b;
 }
 
 
@@ -1919,7 +1919,7 @@ calendar {
 
 calendar:selected {
     border-radius: 9999px;
-    background-color: #1b82b3;
+    background-color: #ab545b;
 }
 
 calendar:backdrop,
@@ -2275,7 +2275,7 @@ messagedialog.csd .dialog-action-area button:disabled {
 }
 
 messagedialog.csd .dialog-action-area button.suggested-action {
-    background-color: #1b82b3;
+    background-color: #ab545b;
     color: white;
 }
 
@@ -3235,7 +3235,7 @@ entry>progress>trough>progress {
     background-image: none;
     border-radius: 6px;
     border-width: 0 0 2px;
-    border-color: #1b82b3;
+    border-color: #ab545b;
     border-style: solid;
     box-shadow: none;
 }
@@ -3412,7 +3412,7 @@ combobox:drop(active) {
     margin-bottom: 2px;
     border-style: none;
     color: white;
-    background-color: #1b82b3;
+    background-color: #ab545b;
 }
 
 :dir(ltr) .entry-tag {
@@ -3431,7 +3431,7 @@ combobox:drop(active) {
 
 :backdrop .entry-tag {
     color: rgba(255, 255, 255, 0.5);
-    background-color: #1b82b3;
+    background-color: #ab545b;
 }
 
 .entry-tag.button {
@@ -4497,7 +4497,7 @@ headerbar entry>progress>trough>progress,
     background-image: none;
     border-radius: 6px;
     border-width: 0 0 2px;
-    border-color: #1b82b3;
+    border-color: #ab545b;
     border-style: solid;
     box-shadow: none;
 }
@@ -4664,7 +4664,7 @@ viewswitcher button.needs-attention:checked>stack>box label {
 
 viewswitcher button.needs-attention>stack>box label {
     animation: needs_attention 150ms ease-in;
-    background-image: image(#1b82b3);
+    background-image: image(#ab545b);
     background-size: 6px 6px, 6px 6px;
     background-repeat: no-repeat;
     background-position: right 0px, right 1px;
@@ -5321,7 +5321,7 @@ assistant .sidebar label {
 }
 
 assistant .sidebar label.highlight {
-    background-color: #1b82b3;
+    background-color: #ab545b;
 }
 
 
@@ -5647,7 +5647,7 @@ placessidebar row:selected:active {
 placessidebar row.sidebar-placeholder-row {
     padding: 0 8px;
     min-height: 2px;
-    background-image: image(#1b82b3);
+    background-image: image(#ab545b);
     background-clip: content-box;
 }
 
@@ -5656,12 +5656,12 @@ placessidebar row.sidebar-new-bookmark-row {
 }
 
 placessidebar row:drop(active):not(:disabled) {
-    color: #1b82b3;
+    color: #ab545b;
     box-shadow: none;
 }
 
 placessidebar row:drop(active):not(:disabled):selected {
-    color: #1b82b3;
+    color: #ab545b;
     box-shadow: none;
 }
 
@@ -6015,18 +6015,18 @@ treeview.view.progressbar {
     box-shadow: none;
     color: white;
     border-radius: 6px;
-    background: #1b82b3;
+    background: #ab545b;
 }
 
 treeview.view.progressbar:not(:backdrop):not(:selected):hover {
-    background-color: #1b82b3;
+    background-color: #ab545b;
 }
 
 treeview.view.progressbar:selected:focus,
 treeview.view.progressbar:selected {
     box-shadow: none;
     border-radius: 6px;
-    background: #1b82b3;
+    background: #ab545b;
 }
 
 treeview.view.progressbar:selected:focus:backdrop,
@@ -6455,7 +6455,7 @@ treeview spinbutton:not(.vertical) entry {
 button.suggested-action {
     color: white;
     outline-color: transparent;
-    background-color: #1b82b3;
+    background-color: #ab545b;
 }
 
 button.suggested-action.flat {
@@ -6465,7 +6465,7 @@ button.suggested-action.flat {
     box-shadow: transparent;
     text-shadow: none;
     -gtk-icon-shadow: none;
-    color: #1b82b3;
+    color: #ab545b;
 }
 
 button.suggested-action:hover {
@@ -6539,7 +6539,7 @@ button.suggested-action.flat:backdrop:disabled {
     box-shadow: none;
     text-shadow: none;
     -gtk-icon-shadow: none;
-    color: #1b82b3;
+    color: #ab545b;
 }
 
 button.suggested-action:disabled {
@@ -6562,7 +6562,7 @@ button.suggested-action:disabled:checked {
     background-clip: padding-box;
     color: white;
     outline-color: transparent;
-    background-color: #1b82b3;
+    background-color: #ab545b;
 }
 
 .osd button.suggested-action:hover {
@@ -6818,7 +6818,7 @@ headerbar button.suggested-action:not(.titlebutton),
 headerbar button.text-button.suggested-action:not(.titlebutton) {
     color: white;
     outline-color: transparent;
-    background-color: #1b82b3;
+    background-color: #ab545b;
 }
 
 popover.background button.suggested-action:hover,
@@ -7391,7 +7391,7 @@ headerbar button.destructive-action:disabled:backdrop:not(.titlebutton),
 headerbar.selection-mode button.suggested-action {
     color: white;
     outline-color: transparent;
-    background-color: #1b82b3;
+    background-color: #ab545b;
     border-color: transparent;
 }
 
@@ -7485,7 +7485,7 @@ button:visited>label,
 button:link,
 button:visited,
 *:link {
-    color: #1b82b3;
+    color: #ab545b;
     font-weight: inherit;
 }
 
@@ -7493,14 +7493,14 @@ button:link>label:visited,
 button:visited>label:visited,
 button:visited,
 *:link:visited {
-    color: #1b82b3;
+    color: #ab545b;
 }
 
 *:selected button:link>label:visited,
 *:selected button:visited>label:visited,
 *:selected button:visited,
 *:selected *:link:visited {
-    color: #1b82b3;
+    color: #ab545b;
 }
 
 button:link>label:hover,
@@ -7526,7 +7526,7 @@ button:visited>label:active,
 button:active:link,
 button:active:visited,
 *:link:active {
-    color: #1b82b3;
+    color: #ab545b;
     background-color: rgba(255, 255, 255, 0.05);
 }
 
@@ -7535,7 +7535,7 @@ button:active:visited,
 *:selected button:active:link,
 *:selected button:active:visited,
 *:selected *:link:active {
-    color: #1b82b3;
+    color: #ab545b;
     background-color: rgba(255, 255, 255, 0.05);
 }
 
@@ -8598,7 +8598,7 @@ iconview.content-view.check:not(list),
     min-width: 32px;
     min-height: 32px;
     color: transparent;
-    background-color: #1b82b3;
+    background-color: #ab545b;
     border-radius: 5px;
     background-image: none;
     transition: 200ms;
@@ -8615,7 +8615,7 @@ iconview.content-view.check:hover:not(list),
     min-width: 32px;
     min-height: 32px;
     color: transparent;
-    background-color: #1b82b3;
+    background-color: #ab545b;
     border-radius: 5px;
     background-image: none;
     transition: 200ms;
@@ -8632,7 +8632,7 @@ iconview.content-view.check:active:not(list),
     min-width: 32px;
     min-height: 32px;
     color: transparent;
-    background-color: #1b82b3;
+    background-color: #ab545b;
     border-radius: 5px;
     background-image: none;
     transition: 200ms;
@@ -8666,7 +8666,7 @@ iconview.content-view.check:checked:not(list),
     min-width: 32px;
     min-height: 32px;
     color: white;
-    background-color: #1b82b3;
+    background-color: #ab545b;
     border-radius: 5px;
     background-image: none;
     transition: 200ms;
@@ -8683,7 +8683,7 @@ iconview.content-view.check:checked:hover:not(list),
     min-width: 32px;
     min-height: 32px;
     color: white;
-    background-color: #1b82b3;
+    background-color: #ab545b;
     border-radius: 5px;
     background-image: none;
     transition: 200ms;
@@ -8700,7 +8700,7 @@ iconview.content-view.check:checked:active:not(list),
     min-width: 32px;
     min-height: 32px;
     color: white;
-    background-color: #1b82b3;
+    background-color: #ab545b;
     border-radius: 5px;
     background-image: none;
     transition: 200ms;
@@ -8717,7 +8717,7 @@ iconview.content-view.check:backdrop:checked:not(list),
     min-width: 32px;
     min-height: 32px;
     color: rgba(255, 255, 255, 0.5);
-    background-color: #1b82b3;
+    background-color: #ab545b;
     border-radius: 5px;
     background-image: none;
     transition: 200ms;
@@ -8772,11 +8772,11 @@ iconview.content-view.check:backdrop:checked:not(list),
 
 @keyframes needs_attention {
     from {
-        background-image: -gtk-gradient(radial, center center, 0, center center, 0.01, to(mix(white, #1b82b3, 0.85)), to(transparent));
+        background-image: -gtk-gradient(radial, center center, 0, center center, 0.01, to(mix(white, #ab545b, 0.85)), to(transparent));
     }
 
     to {
-        background-image: -gtk-gradient(radial, center center, 0, center center, 0.5, to(#1b82b3), to(transparent));
+        background-image: -gtk-gradient(radial, center center, 0, center center, 0.5, to(#ab545b), to(transparent));
     }
 }
 
@@ -8784,7 +8784,7 @@ stacksidebar row.needs-attention>label,
 .stack-switcher>button.needs-attention>label,
 .stack-switcher>button.needs-attention>image {
     animation: needs_attention 150ms ease-in;
-    background-image: radial-gradient(farthest-side, #1b82b3 96%, transparent);
+    background-image: radial-gradient(farthest-side, #ab545b 96%, transparent);
     background-size: 6px 6px;
     background-repeat: no-repeat;
     background-position: right 3px;
@@ -9997,7 +9997,7 @@ headerbar.selection-mode button.titlebutton:backdrop,
 .nautilus-window entry.search>*:not(image),
 .nautilus-window entry.search>*:backdrop:not(image) {
     color: white;
-    background-color: #1b82b3;
+    background-color: #ab545b;
 }
 
 .nautilus-window .view .dim-label,
@@ -10468,7 +10468,7 @@ window.background.chromium headerbar {
 }
 
 window.background.chromium spinner {
-    color: #1b82b3;
+    color: #ab545b;
 }
 
 window.background.chromium textview.view {
@@ -10476,7 +10476,7 @@ window.background.chromium textview.view {
 }
 
 window.background.chromium treeview.view.cell:selected:focus {
-    background-color: #1b82b3;
+    background-color: #ab545b;
     color: white;
 }
 
@@ -10945,4 +10945,4 @@ sq_button.small {
 @define-color theme_base_color #1c1c1c;
 
 /*bg of selections*/
-@define-color theme_selected_bg_color #1b82b3;
+@define-color theme_selected_bg_color #ab545b;
