--- a/themes/.themes/JQN-Mono/gtk-4.0/gtk-dark.css
+++ b/themes/.themes/JQN-Mono/gtk-4.0/gtk-dark.css
@@ -250,7 +250,7 @@ windowtitle .subtitle {
 }
 
 .accent {
-    color: #1b82b3;
+    color: #ab545b;
 }
 
 .success {
@@ -557,7 +557,7 @@ check:indeterminate,
 radio:checked,
 radio:indeterminate {
     color: white;
-    background-image: image(#1b82b3);
+    background-image: image(#ab545b);
     box-shadow: none;
 }
 
@@ -746,7 +746,7 @@ popover.menu check:indeterminate,
 popover.menu radio:checked,
 popover.menu radio:indeterminate {
     color: white;
-    background-image: image(#1b82b3);
+    background-image: image(#ab545b);
     box-shadow: none;
 }
 
@@ -840,7 +840,7 @@ switch:checked {
     color: transparent;
     box-shadow: none;
     transition: background-image 0.3s, box-shadow 0;
-    background-image: image(#1b82b3);
+    background-image: image(#ab545b);
 }
 
 switch:checked:hover {
@@ -926,7 +926,7 @@ switch>slider:checked:disabled {
 }
 
 .osd switch:checked {
-    background-color: #1b82b3;
+    background-color: #ab545b;
     color: #1c1c1c;
 }
 
@@ -1426,7 +1426,7 @@ progressbar>trough {
 }
 
 progressbar>trough>progress {
-    background-color: #1b82b3;
+    background-color: #ab545b;
     border: none;
     border-radius: 99px;
     box-shadow: none;
@@ -1543,8 +1543,8 @@ levelbar>trough>block.low {
 
 levelbar>trough>block.high,
 levelbar>trough>block:not(.empty) {
-    border-color: #1b82b3;
-    background-color: #1b82b3;
+    border-color: #ab545b;
+    background-color: #ab545b;
 }
 
 levelbar>trough>block.full {
@@ -1559,8 +1559,8 @@ levelbar>trough>block.empty {
 
 .osd levelbar>trough>block.high,
 .osd levelbar>trough>block:not(.empty) {
-    border-color: #1b82b3;
-    background-color: #1b82b3;
+    border-color: #ab545b;
+    background-color: #ab545b;
 }
 
 
@@ -1825,7 +1825,7 @@ calendar>header>button:disabled {
 
 
 calendar>grid>label.today {
-    background-image: image(#1b82b3);
+    background-image: image(#ab545b);
     box-shadow: none;
     border-radius: 9999px;
     color: white;
@@ -2754,14 +2754,14 @@ entry>progress>trough>progress {
     background-image: none;
     border-radius: 6px;
     border-width: 0 0 2px;
-    border-color: #1b82b3;
+    border-color: #ab545b;
     border-style: solid;
     box-shadow: none;
 }
 
 .osd spinbutton>progress>trough>progress,
 .osd entry>progress>trough>progress {
-    border-color: #1b82b3;
+    border-color: #ab545b;
 }
 
 treeview entry:focus-within:dir(rtl),
@@ -3681,7 +3681,7 @@ viewswitcher.wide button.toggle.flat:checked:disabled {
 
 viewswitcher.wide button.toggle:checked indicatorbin.needs-attention>indicator,
 viewswitcher.wide button.toggle.flat:checked indicatorbin.needs-attention>indicator {
-    background-color: #1b82b3;
+    background-color: #ab545b;
 }
 
 viewswitcher.narrow button.toggle {
@@ -3914,7 +3914,7 @@ window.assistant .sidebar>label {
 }
 
 window.assistant .sidebar>label.highlight {
-    background-color: #1b82b3;
+    background-color: #ab545b;
     color: #1c1c1c;
 }
 
@@ -4611,7 +4611,7 @@ placessidebar .navigation-sidebar>row:selected:active {
 placessidebar .navigation-sidebar>row.sidebar-placeholder-row {
     padding: 0 8px;
     min-height: 2px;
-    background-image: image(#1b82b3);
+    background-image: image(#ab545b);
     background-clip: content-box;
 }
 
@@ -4620,7 +4620,7 @@ placessidebar .navigation-sidebar>row.sidebar-new-bookmark-row {
 }
 
 placessidebar .navigation-sidebar>row:drop(active):not(:disabled) {
-    color: #1b82b3;
+    color: #ab545b;
     box-shadow: none;
 }
 
@@ -4872,7 +4872,7 @@ treeview.view.progressbar {
     box-shadow: none;
     color: #1c1c1c;
     border-radius: 6px;
-    background: #1b82b3;
+    background: #ab545b;
 }
 
 columnview.view.progressbar,
@@ -4881,7 +4881,7 @@ treeview.view.progressbar,
 treeview.view.progressbar:selected {
     box-shadow: none;
     border-radius: 6px;
-    background: #1b82b3;
+    background: #ab545b;
 }
 
 columnview.view.trough,
@@ -6345,7 +6345,7 @@ menubutton.suggested-action>button,
 menubutton.destructive-action>button,
 menubutton.opaque>button,
 button.opaque {
-    background-image: image(#1b82b3);
+    background-image: image(#ab545b);
     color: white;
 }
 
@@ -6398,7 +6398,7 @@ menubutton.opaque>button.keyboard-activating,
 button.keyboard-activating.suggested-action,
 button.keyboard-activating.destructive-action,
 button.keyboard-activating.opaque {
-    background-image: image(#1b82b3);
+    background-image: image(#ab545b);
 }
 
 actionbar>revealer>box menubutton.suggested-action>button:active:not(.raised):not(.suggested-action):not(.destructive-action):not(.opaque),
@@ -6525,7 +6525,7 @@ menubutton.suggested-action>button:checked:active,
 menubutton.destructive-action>button:checked:active,
 menubutton.opaque>button:checked:active,
 button.opaque:checked:active {
-    background-image: image(#1b82b3);
+    background-image: image(#ab545b);
 }
 
 
@@ -6567,7 +6567,7 @@ button.destructive-action:disabled {
 
 button.suggested-action {
     color: white;
-    background-color: #1b82b3;
+    background-color: #ab545b;
 }
 
 button.suggested-action:hover {
@@ -7242,7 +7242,7 @@ button.link:checked {
 
 link,
 button.link {
-    color: #1b82b3;
+    color: #ab545b;
     text-decoration: none;
     font-weight: inherit;
     background-color: transparent;
@@ -7251,7 +7251,7 @@ button.link {
 
 link:visited,
 button.link:visited {
-    color: #1b82b3;
+    color: #ab545b;
 }
 
 link:hover,
@@ -7263,7 +7263,7 @@ button.link:hover {
 
 link:active,
 button.link:active {
-    color: #1b82b3;
+    color: #ab545b;
     background-color: rgba(40, 40, 40, 0.05);
     transition: 200ms;
 }
@@ -7279,17 +7279,17 @@ button.link:disabled {
 
 .osd link,
 .osd button.link {
-    color: #1b82b3;
+    color: #ab545b;
 }
 
 .osd link:visited,
 .osd button.link:visited {
-    color: #1b82b3;
+    color: #ab545b;
 }
 
 .osd link:active,
 .osd button.link:active {
-    color: #1b82b3;
+    color: #ab545b;
 }
 
 link {
@@ -7365,7 +7365,7 @@ menubutton.osd {
 }
 
 menubutton.suggested-action {
-    background-color: #1b82b3;
+    background-color: #ab545b;
     color: white;
 }
 
@@ -7772,7 +7772,7 @@ tabbar tab:checked {
 }
 
 tabbar tab.needs-attention {
-    background-image: image(#1b82b3);
+    background-image: image(#ab545b);
 }
 
 tabbar tab.needs-attention:hover,
@@ -7816,7 +7816,7 @@ dnd tab {
 }
 
 dnd tab.needs-attention {
-    background-image: image(#1b82b3);
+    background-image: image(#ab545b);
 }
 
 tabbar tab,
@@ -7959,7 +7959,7 @@ stacksidebar row.needs-attention>label,
 stackswitcher>button.needs-attention>label,
 stackswitcher>button.needs-attention>image {
     animation: needs_attention 150ms ease-in;
-    background-image: image(#1b82b3);
+    background-image: image(#ab545b);
     background-size: 6px 6px, 6px 6px;
     background-repeat: no-repeat;
     background-position: right 3px, right 2px;
@@ -7979,11 +7979,11 @@ stackswitcher>button.needs-attention>image:dir(rtl) {
 
 @keyframes needs_attention {
     from {
-        background-image: radial-gradient(farthest-side, #1b82b3 0%, transparent 0%);
+        background-image: radial-gradient(farthest-side, #ab545b 0%, transparent 0%);
     }
 
     to {
-        background-image: radial-gradient(farthest-side, #1b82b3 95%, transparent);
+        background-image: radial-gradient(farthest-side, #ab545b 95%, transparent);
     }
 }
 
@@ -8122,7 +8122,7 @@ headerbar splitbutton:not(.raised):not(.suggested-action):not(.destructive-actio
 }
 
 splitbutton.suggested-action {
-    background-color: #1b82b3;
+    background-color: #ab545b;
     color: white;
 }
 
@@ -8224,7 +8224,7 @@ indicatorbin>mask {
 }
 
 indicatorbin.needs-attention>indicator {
-    background: #1b82b3;
+    background: #ab545b;
 }
 
 indicatorbin.needs-attention>indicator>label {
@@ -8436,7 +8436,7 @@ window.messagedialog .response-area>box>button:disabled {
 }
 
 window.messagedialog .response-area>box>button.suggested {
-    background-color: #1b82b3;
+    background-color: #ab545b;
     color: white;
 }
 
@@ -8502,7 +8502,7 @@ window.messagedialog .response-area>box>button.destructive:disabled {
 @define-color theme_fg_color #1c1c1c;
 @define-color theme_base_color #f0f0f0;
 @define-color theme_text_color @1c1c1c;
-@define-color theme_selected_bg_color #1b82b3;
+@define-color theme_selected_bg_color #ab545b;
 @define-color theme_selected_fg_color white;
 @define-color insensitive_bg_color #f0f0f0;
 @define-color insensitive_fg_color rgba(40, 40, 40, 0.5);
@@ -8512,12 +8512,12 @@ window.messagedialog .response-area>box>button.destructive:disabled {
 @define-color theme_unfocused_fg_color rgba(40, 40, 40, 0.5);
 @define-color theme_unfocused_base_color #f5f5f5;
 @define-color theme_unfocused_text_color #1c1c1c;
-@define-color theme_unfocused_selected_bg_color #1b82b3;
+@define-color theme_unfocused_selected_bg_color #ab545b;
 @define-color theme_unfocused_selected_fg_color white;
 @define-color unfocused_insensitive_color #f5f5f5;
 @define-color unfocused_borders rgba(40, 40, 40, 0.1);
 
-@define-color accent_color #1b82b3;
+@define-color accent_color #ab545b;
 @define-color accent_bg_color accent_color;
 @define-color accent_fg_color white;
 @define-color destructive_color #c34c4a;
