--- a/themes/.themes/JQN-Mono/gtk-3.0/gtk.css
+++ b/themes/.themes/JQN-Mono/gtk-3.0/gtk.css
@@ -10,10 +10,6 @@
     transition: 0ms;
 }
 
-.libreoffice .view {
-    background-color: #2e2e2e;
-}
-
 .background:backdrop {
     color: rgba(255, 255, 255, 0.5);
     background-color: #1c1c1c;
@@ -341,7 +337,7 @@ label.separator {
 }
 
 .accent {
-    color: #ab545b;
+    color: #5f7a8c;
 }
 
 .success {
@@ -835,7 +831,7 @@ check:indeterminate,
 radio:checked,
 radio:indeterminate {
     color: white;
-    background-image: image(#ab545b);
+    background-image: image(#5f7a8c);
     box-shadow: none;
 }
 
@@ -843,14 +839,14 @@ check:checked:hover,
 check:indeterminate:hover,
 radio:checked:hover,
 radio:indeterminate:hover {
-    background-image: image(#865054);
+    background-image: image(#5f7a7f);
 }
 
 check:checked:active,
 check:indeterminate:active,
 radio:checked:active,
 radio:indeterminate:active {
-    background-image: image(#ab545b);
+    background-image: image(#5f7a8c);
 }
 
 check:checked:backdrop,
@@ -960,12 +956,12 @@ switch:checked {
     color: transparent;
     box-shadow: none;
     transition: background-image 0.3s, box-shadow 0;
-    background-image: image(#ab545b);
+    background-image: image(#5f7a8c);
 }
 
 switch:checked:hover {
     transition: all 150ms cubic-bezier(0, 0, 0.2, 1);
-    background-image: image(#865054);
+    background-image: image(#5f7a7f);
 }
 
 switch:backdrop {
@@ -1381,7 +1377,7 @@ progressbar>trough {
 }
 
 progressbar>trough>progress {
-    background-color: #ab545b;
+    background-color: #5f7a8c;
     border: none;
     border-radius: 99px;
     box-shadow: none;
@@ -1494,8 +1490,8 @@ levelbar>trough>block.low {
 
 levelbar>trough>block.high,
 levelbar>trough>block:not(.empty) {
-    border-color: #ab545b;
-    background-color: #ab545b;
+    border-color: #5f7a8c;
+    background-color: #5f7a8c;
 }
 
 levelbar>trough>block.full {
@@ -1510,8 +1506,8 @@ levelbar>trough>block.empty {
 
 .osd levelbar>trough>block.high,
 .osd levelbar>trough>block:not(.empty) {
-    border-color: #ab545b;
-    background-color: #ab545b;
+    border-color: #5f7a8c;
+    background-color: #5f7a8c;
 }
 
 
@@ -1919,7 +1915,7 @@ calendar {
 
 calendar:selected {
     border-radius: 9999px;
-    background-color: #ab545b;
+    background-color: #5f7a8c;
 }
 
 calendar:backdrop,
@@ -2275,12 +2271,12 @@ messagedialog.csd .dialog-action-area button:disabled {
 }
 
 messagedialog.csd .dialog-action-area button.suggested-action {
-    background-color: #ab545b;
+    background-color: #5f7a8c;
     color: white;
 }
 
 messagedialog.csd .dialog-action-area button.suggested-action:hover {
-    background-color: #865054;
+    background-color: #5f7a7f;
     box-shadow: none;
 }
 
@@ -2292,14 +2288,14 @@ messagedialog.csd .dialog-action-area button.suggested-action:active {
 }
 
 messagedialog.csd .dialog-action-area button.suggested-action:checked {
-    background-color: #865054;
+    background-color: #5f7a7f;
     box-shadow: none;
     text-shadow: none;
     -gtk-icon-shadow: none;
 }
 
 messagedialog.csd .dialog-action-area button.suggested-action:backdrop {
-    background-color: #196b93;
+    background-color: #4a5f6b;
     color: rgba(255, 255, 255, 0.5);
 }
 
@@ -3235,7 +3231,7 @@ entry>progress>trough>progress {
     background-image: none;
     border-radius: 6px;
     border-width: 0 0 2px;
-    border-color: #ab545b;
+    border-color: #5f7a8c;
     border-style: solid;
     box-shadow: none;
 }
@@ -3412,7 +3408,7 @@ combobox:drop(active) {
     margin-bottom: 2px;
     border-style: none;
     color: white;
-    background-color: #ab545b;
+    background-color: #5f7a8c;
 }
 
 :dir(ltr) .entry-tag {
@@ -3426,12 +3422,12 @@ combobox:drop(active) {
 }
 
 .entry-tag:hover {
-    background-color: #865054;
+    background-color: #5f7a7f;
 }
 
 :backdrop .entry-tag {
     color: rgba(255, 255, 255, 0.5);
-    background-color: #ab545b;
+    background-color: #5f7a8c;
 }
 
 .entry-tag.button {
@@ -4497,7 +4493,7 @@ headerbar entry>progress>trough>progress,
     background-image: none;
     border-radius: 6px;
     border-width: 0 0 2px;
-    border-color: #ab545b;
+    border-color: #5f7a8c;
     border-style: solid;
     box-shadow: none;
 }
@@ -4664,7 +4660,7 @@ viewswitcher button.needs-attention:checked>stack>box label {
 
 viewswitcher button.needs-attention>stack>box label {
     animation: needs_attention 150ms ease-in;
-    background-image: image(#ab545b);
+    background-image: image(#5f7a8c);
     background-size: 6px 6px, 6px 6px;
     background-repeat: no-repeat;
     background-position: right 0px, right 1px;
@@ -5321,7 +5317,7 @@ assistant .sidebar label {
 }
 
 assistant .sidebar label.highlight {
-    background-color: #ab545b;
+    background-color: #5f7a8c;
 }
 
 
@@ -5647,7 +5643,7 @@ placessidebar row:selected:active {
 placessidebar row.sidebar-placeholder-row {
     padding: 0 8px;
     min-height: 2px;
-    background-image: image(#ab545b);
+    background-image: image(#5f7a8c);
     background-clip: content-box;
 }
 
@@ -5656,12 +5652,12 @@ placessidebar row.sidebar-new-bookmark-row {
 }
 
 placessidebar row:drop(active):not(:disabled) {
-    color: #ab545b;
+    color: #5f7a8c;
     box-shadow: none;
 }
 
 placessidebar row:drop(active):not(:disabled):selected {
-    color: #ab545b;
+    color: #5f7a8c;
     box-shadow: none;
 }
 
@@ -6015,18 +6011,18 @@ treeview.view.progressbar {
     box-shadow: none;
     color: white;
     border-radius: 6px;
-    background: #ab545b;
+    background: #5f7a8c;
 }
 
 treeview.view.progressbar:not(:backdrop):not(:selected):hover {
-    background-color: #ab545b;
+    background-color: #5f7a8c;
 }
 
 treeview.view.progressbar:selected:focus,
 treeview.view.progressbar:selected {
     box-shadow: none;
     border-radius: 6px;
-    background: #ab545b;
+    background: #5f7a8c;
 }
 
 treeview.view.progressbar:selected:focus:backdrop,
@@ -6455,7 +6451,7 @@ treeview spinbutton:not(.vertical) entry {
 button.suggested-action {
     color: white;
     outline-color: transparent;
-    background-color: #ab545b;
+    background-color: #5f7a8c;
 }
 
 button.suggested-action.flat {
@@ -6465,43 +6461,43 @@ button.suggested-action.flat {
     box-shadow: transparent;
     text-shadow: none;
     -gtk-icon-shadow: none;
-    color: #ab545b;
+    color: #5f7a8c;
 }
 
 button.suggested-action:hover {
     color: white;
     outline-color: transparent;
-    background-color: #865054;
+    background-color: #5f7a7f;
     box-shadow: none;
 }
 
 button.suggested-action:active {
     color: white;
     outline-color: transparent;
-    background-color: #196b93;
+    background-color: #4a5f6b;
 }
 
 button.suggested-action:checked {
     color: white;
     outline-color: transparent;
-    background-color: #865054;
+    background-color: #5f7a7f;
     box-shadow: none;
     text-shadow: none;
     -gtk-icon-shadow: none;
 }
 
 button.suggested-action:active:hover {
-    background-color: #196b93;
+    background-color: #4a5f6b;
 }
 
 button.suggested-action:checked:hover {
-    background-color: #865054;
+    background-color: #5f7a7f;
 }
 
 button.suggested-action:backdrop,
 button.suggested-action.flat:backdrop {
     color: rgba(255, 255, 255, 0.5);
-    background-color: #196b93;
+    background-color: #4a5f6b;
     text-shadow: none;
     -gtk-icon-shadow: none;
 }
@@ -6511,7 +6507,7 @@ button.suggested-action:backdrop:checked,
 button.suggested-action.flat:backdrop:active,
 button.suggested-action.flat:backdrop:checked {
     color: rgba(255, 255, 255, 0.5);
-    background-color: #196b93;
+    background-color: #4a5f6b;
 }
 
 button.suggested-action:backdrop:disabled,
@@ -6539,7 +6535,7 @@ button.suggested-action.flat:backdrop:disabled {
     box-shadow: none;
     text-shadow: none;
     -gtk-icon-shadow: none;
-    color: #ab545b;
+    color: #5f7a8c;
 }
 
 button.suggested-action:disabled {
@@ -6562,13 +6558,13 @@ button.suggested-action:disabled:checked {
     background-clip: padding-box;
     color: white;
     outline-color: transparent;
-    background-color: #ab545b;
+    background-color: #5f7a8c;
 }
 
 .osd button.suggested-action:hover {
     color: white;
     border-color: transparent;
-    background-color: #865054;
+    background-color: #5f7a7f;
     background-clip: padding-box;
     outline-color: transparent;
 }
@@ -6577,7 +6573,7 @@ button.suggested-action:disabled:checked {
 .osd button.suggested-action:active {
     color: white;
     border-color: transparent;
-    background-color: #196b93;
+    background-color: #4a5f6b;
     background-clip: padding-box;
     outline-color: transparent;
 }
@@ -6586,7 +6582,7 @@ button.suggested-action:disabled:checked {
 .osd button.suggested-action:checked {
     color: white;
     border-color: transparent;
-    background-color: #865054;
+    background-color: #5f7a7f;
     background-clip: padding-box;
     outline-color: transparent;
 }
@@ -6594,7 +6590,7 @@ button.suggested-action:disabled:checked {
 .osd button.suggested-action:backdrop {
     color: rgba(255, 255, 255, 0.5);
     border-color: transparent;
-    background-color: #196b93;
+    background-color: #4a5f6b;
     background-clip: padding-box;
     box-shadow: none;
     text-shadow: none;
@@ -6818,7 +6814,7 @@ headerbar button.suggested-action:not(.titlebutton),
 headerbar button.text-button.suggested-action:not(.titlebutton) {
     color: white;
     outline-color: transparent;
-    background-color: #ab545b;
+    background-color: #5f7a8c;
 }
 
 popover.background button.suggested-action:hover,
@@ -6853,7 +6849,7 @@ headerbar button.suggested-action:hover:not(.titlebutton),
 .titlebar button.suggested-action:hover:not(.titlebutton) {
     color: white;
     outline-color: transparent;
-    background-color: #865054;
+    background-color: #5f7a7f;
     box-shadow: none;
 }
 
@@ -6887,7 +6883,7 @@ headerbar button.suggested-action:active:not(.titlebutton),
 .titlebar button.suggested-action:active:not(.titlebutton) {
     color: white;
     outline-color: transparent;
-    background-color: #196b93;
+    background-color: #4a5f6b;
     box-shadow: none;
     text-shadow: none;
     -gtk-icon-shadow: none;
@@ -6925,7 +6921,7 @@ headerbar button.suggested-action:checked:not(.titlebutton),
 .titlebar button.suggested-action:checked:not(.titlebutton) {
     color: white;
     outline-color: transparent;
-    background-color: #865054;
+    background-color: #5f7a7f;
     box-shadow: none;
     text-shadow: none;
     -gtk-icon-shadow: none;
@@ -6958,7 +6954,7 @@ headerbar button.suggested-action.text-button:active:hover:not(.suggested-action
 .nautilus-window .titlebar :not(.raised) .linked>button.suggested-action:active:hover,
 headerbar button.suggested-action:active:hover:not(.titlebutton),
 .titlebar button.suggested-action:active:hover:not(.titlebutton) {
-    background-color: #196b93;
+    background-color: #4a5f6b;
 }
 
 popover.background button.suggested-action:checked:hover,
@@ -6990,7 +6986,7 @@ headerbar viewswitcher button.suggested-action.radio:checked:hover,
 .titlebar viewswitcher button.suggested-action.radio:checked:hover,
 headerbar button.suggested-action:checked:hover:not(.titlebutton),
 .titlebar button.suggested-action:checked:hover:not(.titlebutton) {
-    background-color: #865054;
+    background-color: #5f7a7f;
 }
 
 popover.background button.suggested-action:backdrop,
@@ -7391,7 +7387,7 @@ headerbar button.destructive-action:disabled:backdrop:not(.titlebutton),
 headerbar.selection-mode button.suggested-action {
     color: white;
     outline-color: transparent;
-    background-color: #ab545b;
+    background-color: #5f7a8c;
     border-color: transparent;
 }
 
@@ -7401,7 +7397,7 @@ headerbar.selection-mode button.suggested-action {
 headerbar.selection-mode button.suggested-action:hover {
     color: white;
     outline-color: transparent;
-    background-color: #865054;
+    background-color: #5f7a7f;
     border-color: transparent;
     box-shadow: none;
 }
@@ -7412,7 +7408,7 @@ headerbar.selection-mode button.suggested-action:hover {
 headerbar.selection-mode button.suggested-action:active {
     color: white;
     outline-color: transparent;
-    background-color: #196b93;
+    background-color: #4a5f6b;
     border-color: transparent;
     box-shadow: none;
     text-shadow: none;
@@ -7423,7 +7419,7 @@ headerbar.selection-mode button.suggested-action:active {
 .selection-mode.titlebar:not(headerbar) button.suggested-action:active:hover,
 .selection-mode headerbar button.suggested-action:active:hover,
 headerbar.selection-mode button.suggested-action:active:hover {
-    background-color: #196b93;
+    background-color: #4a5f6b;
 }
 
 .selection-mode .titlebar:not(headerbar) button.suggested-action:backdrop,
@@ -7431,7 +7427,7 @@ headerbar.selection-mode button.suggested-action:active:hover {
 .selection-mode headerbar button.suggested-action:backdrop,
 headerbar.selection-mode button.suggested-action:backdrop {
     color: rgba(255, 255, 255, 0.5);
-    background-color: #196b93;
+    background-color: #4a5f6b;
     border-color: transparent;
     text-shadow: none;
     -gtk-icon-shadow: none;
@@ -7485,7 +7481,7 @@ button:visited>label,
 button:link,
 button:visited,
 *:link {
-    color: #ab545b;
+    color: #5f7a8c;
     font-weight: inherit;
 }
 
@@ -7493,14 +7489,14 @@ button:link>label:visited,
 button:visited>label:visited,
 button:visited,
 *:link:visited {
-    color: #ab545b;
+    color: #5f7a8c;
 }
 
 *:selected button:link>label:visited,
 *:selected button:visited>label:visited,
 *:selected button:visited,
 *:selected *:link:visited {
-    color: #ab545b;
+    color: #5f7a8c;
 }
 
 button:link>label:hover,
@@ -7508,7 +7504,7 @@ button:visited>label:hover,
 button:hover:link,
 button:hover:visited,
 *:link:hover {
-    color: #865054;
+    color: #5f7a7f;
     background-color: rgba(255, 255, 255, 0.1);
 }
 
@@ -7517,7 +7513,7 @@ button:hover:visited,
 *:selected button:hover:link,
 *:selected button:hover:visited,
 *:selected *:link:hover {
-    color: #865054;
+    color: #5f7a7f;
     background-color: rgba(255, 255, 255, 0.1);
 }
 
@@ -7526,7 +7522,7 @@ button:visited>label:active,
 button:active:link,
 button:active:visited,
 *:link:active {
-    color: #ab545b;
+    color: #5f7a8c;
     background-color: rgba(255, 255, 255, 0.05);
 }
 
@@ -7535,7 +7531,7 @@ button:active:visited,
 *:selected button:active:link,
 *:selected button:active:visited,
 *:selected *:link:active {
-    color: #ab545b;
+    color: #5f7a8c;
     background-color: rgba(255, 255, 255, 0.05);
 }
 
@@ -7572,7 +7568,7 @@ button:selected:visited,
 *:selected button:visited,
 *:link:selected,
 *:selected *:link {
-    color: #865054;
+    color: #5f7a7f;
 }
 
 button:link,
@@ -8547,7 +8543,7 @@ tabbar tab,
 
 tabbar tab.needs-attention,
 .tab-drag-icon tab.needs-attention {
-    background-image: image(#865054);
+    background-image: image(#5f7a7f);
 }
 
 tabbar tab .tab-close-button,
@@ -8598,7 +8594,7 @@ iconview.content-view.check:not(list),
     min-width: 32px;
     min-height: 32px;
     color: transparent;
-    background-color: #ab545b;
+    background-color: #5f7a8c;
     border-radius: 5px;
     background-image: none;
     transition: 200ms;
@@ -8615,7 +8611,7 @@ iconview.content-view.check:hover:not(list),
     min-width: 32px;
     min-height: 32px;
     color: transparent;
-    background-color: #ab545b;
+    background-color: #5f7a8c;
     border-radius: 5px;
     background-image: none;
     transition: 200ms;
@@ -8632,7 +8628,7 @@ iconview.content-view.check:active:not(list),
     min-width: 32px;
     min-height: 32px;
     color: transparent;
-    background-color: #ab545b;
+    background-color: #5f7a8c;
     border-radius: 5px;
     background-image: none;
     transition: 200ms;
@@ -8666,7 +8662,7 @@ iconview.content-view.check:checked:not(list),
     min-width: 32px;
     min-height: 32px;
     color: white;
-    background-color: #ab545b;
+    background-color: #5f7a8c;
     border-radius: 5px;
     background-image: none;
     transition: 200ms;
@@ -8683,7 +8679,7 @@ iconview.content-view.check:checked:hover:not(list),
     min-width: 32px;
     min-height: 32px;
     color: white;
-    background-color: #ab545b;
+    background-color: #5f7a8c;
     border-radius: 5px;
     background-image: none;
     transition: 200ms;
@@ -8700,7 +8696,7 @@ iconview.content-view.check:checked:active:not(list),
     min-width: 32px;
     min-height: 32px;
     color: white;
-    background-color: #ab545b;
+    background-color: #5f7a8c;
     border-radius: 5px;
     background-image: none;
     transition: 200ms;
@@ -8717,7 +8713,7 @@ iconview.content-view.check:backdrop:checked:not(list),
     min-width: 32px;
     min-height: 32px;
     color: rgba(255, 255, 255, 0.5);
-    background-color: #ab545b;
+    background-color: #5f7a8c;
     border-radius: 5px;
     background-image: none;
     transition: 200ms;
@@ -8772,11 +8768,11 @@ iconview.content-view.check:backdrop:checked:not(list),
 
 @keyframes needs_attention {
     from {
-        background-image: -gtk-gradient(radial, center center, 0, center center, 0.01, to(mix(white, #ab545b, 0.85)), to(transparent));
+        background-image: -gtk-gradient(radial, center center, 0, center center, 0.01, to(mix(white, #5f7a8c, 0.85)), to(transparent));
     }
 
     to {
-        background-image: -gtk-gradient(radial, center center, 0, center center, 0.5, to(#ab545b), to(transparent));
+        background-image: -gtk-gradient(radial, center center, 0, center center, 0.5, to(#5f7a8c), to(transparent));
     }
 }
 
@@ -8784,7 +8780,7 @@ stacksidebar row.needs-attention>label,
 .stack-switcher>button.needs-attention>label,
 .stack-switcher>button.needs-attention>image {
     animation: needs_attention 150ms ease-in;
-    background-image: radial-gradient(farthest-side, #ab545b 96%, transparent);
+    background-image: radial-gradient(farthest-side, #5f7a8c 96%, transparent);
     background-size: 6px 6px;
     background-repeat: no-repeat;
     background-position: right 3px;
@@ -9997,7 +9993,7 @@ headerbar.selection-mode button.titlebutton:backdrop,
 .nautilus-window entry.search>*:not(image),
 .nautilus-window entry.search>*:backdrop:not(image) {
     color: white;
-    background-color: #ab545b;
+    background-color: #5f7a8c;
 }
 
 .nautilus-window .view .dim-label,
@@ -10468,7 +10464,7 @@ window.background.chromium headerbar {
 }
 
 window.background.chromium spinner {
-    color: #ab545b;
+    color: #5f7a8c;
 }
 
 window.background.chromium textview.view {
@@ -10476,7 +10472,7 @@ window.background.chromium textview.view {
 }
 
 window.background.chromium treeview.view.cell:selected:focus {
-    background-color: #ab545b;
+    background-color: #5f7a8c;
     color: white;
 }
 
@@ -10945,4 +10941,4 @@ sq_button.small {
 @define-color theme_base_color #1c1c1c;
 
 /*bg of selections*/
-@define-color theme_selected_bg_color #ab545b;
+@define-color theme_selected_bg_color #5f7a8c;
